Actualizacion proyecto y suba instructivo

--- a/templates/sitio/css/style.css
+++ b/templates/sitio/css/style.css
@@ -50,6 +50,19 @@ tbody{
   
 }
 
+img{
+
+border-radius: 14px;
+border-color: blue;
+
+}
+
+.textoform{
+
+ font-size: medium;
+ font-weight: bolder;
+
+}
 
 .card-header {
     
