--- a/templates/sitio/altaalbum.html
+++ b/templates/sitio/altaalbum.html
@@ -8,7 +8,7 @@
 
 
   <div class="card-header">
-   <h6 align="center">Alta del album</h6> 
+   <h6 align="center">Alta del álbum</h6> 
 
 
   </div>
@@ -33,7 +33,7 @@
         <div class="form-group col-md-3">
           <label for="interprete">Interprete</label>
           <select id="inteprete" name="txtinterprete" class="form-control" required>
-            <option selected>Seleccione el interprete ...</option>
+        
             {% for interprete in interpretes%}
             <option value="{{interprete[0]}}">{{interprete[1]}} {{interprete[2]}}</option>
             {% endfor%}
@@ -50,7 +50,7 @@
         <div class="form-group col-md-3">
           <label for="genero">Genero</label>
           <select id="genero" name="txtgenero" class="form-control" required>
-            <option selected>Seleccione el Genero ...</option>
+
             {% for genero in generos%}
             <option value="{{genero[0]}}">{{genero[1]}}</option>
             {% endfor%}
@@ -58,12 +58,12 @@
         </div>
         <div class="form-group col-md-1">
           <label for="temas">Nro.temas</label>
-          <input type="number" class="form-control" id="cantidad" name="txttemas" minvalue="1" pattern="99"  required>
+          <input type="number" class="form-control" id="temas" name="txttemas" minvalue="1" pattern="99"  required>
         </div>
         <div class="form-group col-md-3">
           <label for="discografica">Discográfica</label>
           <select id="discografica" name="txtdiscografica" class="form-control" required>
-            <option selected>Seleccione discografica ...</option>
+           
             {% for discografica in discograficas%}
             <option value="{{discografica[0]}}">{{discografica[1]}}</option>
             {% endfor%}
@@ -74,7 +74,7 @@
         <div class="form-group col-md-3">
           <label for="formato">Formato</label>
           <select id="formato" name="txtformato" class="form-control" required>
-            <option selected>Seleccione el formato ...</option>
+        
             {% for formato in formatos%}
             <option value="{{formato[0]}}">{{formato[1]}}</option>
             {% endfor%}
@@ -85,7 +85,7 @@
           <div class="col-1">
 
           </div>
-        <div class="form-group col-md-3">
+        <div class="form-group col-md-2">
           <label for="fecha">Fecha lanzamiento</label>
           <input type="date" class="form-control" id="fecha" name="txtfecha" required>
         </div>
@@ -94,12 +94,12 @@
           <input type="number" step='any' class="form-control" min=0.00 id="precio" name="txtprecio" required>
         </div>
         <div class="form-group col-md-1">
-          <label for="cantidad">Cantidad</label>
+          <label for="cantidad">Stock</label>
           <input type="number" class="form-control" id="cantidad" min="0" name="txtcantidad" required>
         </div>
 
-        <div class="form-group col-md-2">
-          <label for="caratula2">Caratula</label>
+        <div class="form-group col-md-3">
+          <label for="caratula2">.</label>
           <input type="text" value="sin_imagen.png" disabled class="form-control caratula2" id="caratula2" name="txtcaratula2">
         </div>
 
@@ -112,28 +112,6 @@
     </div>
         <div class="form-row">
    
-
-        <!--<div class="form-group col-md-2">
-                    <label for="inputState">State</label>
-                    <select id="inputState" class="form-control">
-                      <option selected>Choose...</option>
-                      <option>...</option>
-                    </select>
-                  </div>
-                  <div class="form-group col-md-2">
-                    <label for="inputZip">Zip</label>
-                    <input type="text" class="form-control" id="inputZip">
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="gridCheck">
-                    <label class="form-check-label" for="gridCheck">
-                      Check me out
-                    </label>
-                  </div>
-                </div>-->
                 <div class="col-md-5">      
                   
           
@@ -142,7 +120,7 @@
         <button type="submit" class="btn btn-primary text-center">Dar alta</button>
 
       </div> 
-  </DIV>
+    </div>
 
     </form>
 
