--- a/templates/sitio/cabecera.html
+++ b/templates/sitio/cabecera.html
@@ -28,10 +28,11 @@
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Listados de albumes
+                    Listados de álbumes
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/listaalbumes"><h6>Listado por artista</h6></a>
+                    <a class="dropdown-item" href="/listaalbumes"><h6>Listado sin orden</h6></a>
+                    <a class="dropdown-item" href="/listaalbumesartista"><h6>Listado por intérprete</h6></a>
                     <a class="dropdown-item" href="/listagenero"><h6>Listado por género</h6> </a>
                     <!--<div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Something else here</a>
@@ -39,7 +40,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Gestión de albumes
+                      Gestión de álbumes
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <a class="dropdown-item" href="/altaalbum"><h6>Alta</h6></a>
@@ -77,5 +78,5 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="/js/seleccion.js"></script>
+   
   
