--- a/templates/sitio/listaalbumnombre.html
+++ b/templates/sitio/listaalbumnombre.html
@@ -9,10 +9,10 @@
                 <table class="table table-stripped">
                     <thead>
                         <tr>
-                            <th>Codigo</th>
+                            <th>Código</th>
                             <th>Nombre</th>
-                            <th>Interprete</th>
-                            <th>Genero</th>
+                            <th>Intérprete</th>
+                            <th>Género</th>
                             <th>Discográfica</th>
                             <th>Formato</th>
                             <th></th>
@@ -26,12 +26,12 @@
               
                           {% for album in albums %}
                             <tr>
-                                <td>{{album[1]}}</td>
-                                <td>{{album[2]}}</td>
-                                <td>{{album[4]}}  {{album[5]}}</td>
-                                <td>{{album[7]}}</td>
-                                <td>{{album[9]}}</td>
-                                <td>{{album[13]}}</td>
+                                <td class="textoform">{{album[1]}}</td>
+                                <td class="textoform">{{album[2]}}</td>
+                                <td class="textoform">{{album[4]}}  {{album[5]}}</td>
+                                <td class="textoform">{{album[7]}}</td>
+                                <td class="textoform">{{album[9]}}</td>
+                                <td class="textoform">{{album[13]}}</td>
 
                                 <td>
                                     <form action="listaalbumes/detalle/{{album[0]}}" method="post">
@@ -41,34 +41,13 @@
 
                                  </td>   
                                 <td>
-                                    <form action="listaalbumes/borrar/{{album[0]}}" method="post">
-                                        <input type="hidden" value="{{album[0]}}" name="txtid" id="txtid">
-                                        <button type="button" class="btn btn-sm btn-danger" data-toggle="modal" 
-                                        data-target="#eliminarmodal">Eliminar</button>
+                                  <form action="listaalbumes/borrar/{{album[0]}}" onsubmit="return confirm('¿ Esta seguro de eliminar los datos del album?');" method="post">
+                                    <input type="hidden" value="{{album[0]}}" name="txtid" id="txtid">
+                                    <button type="submit" class="btn btn-sm btn-danger">Eliminar</button>
+                                </form>
 
-                                        <div class="modal fade" id="eliminarmodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                                            <div class="modal-dialog modal-dialog-centered" role="document">
-                                              <div class="modal-content">
-                                                <div class="modal-header">
-                                                  <h5 class="modal-title" id="exampleModalLongTitle">Advertencia</h5>
-                                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                    <span aria-hidden="true">&times;</span>
-                                                  </button>
-                                                </div>
-                                                <div class="modal-body">
-                                                  <h6>¿Realmente desea eliminar el album?</h6>
-                                                </div>
-                                                <div class="modal-footer">
-                                                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                                                  <button type="submit" class="btn btn-primary">Aceptar</button>
-                                                </div>
-                                              </div>
-                                            </div>
-                                        </div>
-                                    </form>
-
-                     
-                            
+                
+                                    
                                 </td>
                                  <td>
                                     <form action="listaalbumes/modificar/{{album[0]}}" method="post">
