--- a/templates/sitio/listagenero.html
+++ b/templates/sitio/listagenero.html
@@ -9,12 +9,16 @@
                 <table class="table table-stripped">
                     <thead>
                         <tr>
-                            <th>Codigo</th>
+                            <th>Código</th>
                             <th>Nombre</th>
-                            <th>Interprete</th>
-                            <th>Genero</th>
+                            <th>Intérprete</th>
+                            <th>Género</th>
                             <th>Discográfica</th>
+                            <th>Formato</th>
                             <th></th>
+                            <th>Acciones
+                                
+                            </th>
                             <th></th>
                         </tr>
                     </thead>
@@ -22,38 +26,26 @@
               
                           {% for album in albums %}
                             <tr>
-                                <td>{{album[1]}}</td>
-                                <td>{{album[2]}}</td>
-                                <td>{{album[3]}}  {{album[4]}}</td>
-                                <td>{{album[5]}}</td>
-                                <td>{{album[6]}}</td>
+                                <td class="textoform">{{album[1]}}</td>
+                                <td class="textoform">{{album[2]}}</td>
+                                <td class="textoform">{{album[3]}}  {{album[4]}}</td>
+                                <td class="textoform">{{album[5]}}</td>
+                                <td class="textoform">{{album[6]}}</td>
+                                <td class="textoform">{{album[9]}}</td>
+
                                 <td>
-                                    <form action="listaalbumes/borrar/{{album[0]}}" method="post">
-                                        <form action="listaalbumes/borrar/{{album[0]}}" method="post">
-                                            <input type="hidden" value="{{album[0]}}" name="txtid" id="txtid">
-                                            <button type="button" class="btn btn-sm btn-danger" data-toggle="modal" 
-                                            data-target="#eliminarmodal">Eliminar</button>
-    
-                                            <div class="modal fade" id="eliminarmodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                                                <div class="modal-dialog modal-dialog-centered" role="document">
-                                                  <div class="modal-content">
-                                                    <div class="modal-header">
-                                                      <h5 class="modal-title" id="exampleModalLongTitle">Advertencia</h5>
-                                                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                        <span aria-hidden="true">&times;</span>
-                                                      </button>
-                                                    </div>
-                                                    <div class="modal-body">
-                                                      <h6>¿Realmente desea eliminar el album?</h6>
-                                                    </div>
-                                                    <div class="modal-footer">
-                                                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                                                      <button type="submit" class="btn btn-primary">Aceptar</button>
-                                                    </div>
-                                                  </div>
-                                                </div>
-                                            </div>
-                                        </form>
+                                  <form action="listaalbumes/detalle/{{album[0]}}" method="post">
+                                      <input type="hidden" value="{{album[0]}}" name="txtid3">
+                                      <button type="submit" class="btn btn-sm btn-success">Detalle</button>
+                                  </form>
+
+                               </td>  
+                                <td>
+                        
+                                  <form action="listaalbumes/borrar/{{album[0]}}" onsubmit="return confirm('¿ Esta seguro de eliminar los datos del album?');" method="post">
+                                    <input type="hidden" value="{{album[0]}}" name="txtid" id="txtid">
+                                    <button type="submit" class="btn btn-sm btn-danger">Eliminar</button>
+                                </form>
                             
                                 </td>
                                  <td>
