--- a/templates/sitio/modificaalbum.html
+++ b/templates/sitio/modificaalbum.html
@@ -1,164 +1,162 @@
-
 {% include 'sitio/cabecera.html' %}
 
 
 <br />
+
 <div class="card">
   <div class="card-header">
-    <h6 align="center">Actualización del album</h6> 
+    <h6 align="center">Actualización del álbum</h6>
 
 
   </div>
   {% for al in album %}
   <div class="card-body">
-    <form action="/update/{{al[0]}}" method="post" enctype="multipart/form-data">
-      <div class="form-row">
+      <form action="/update/{{al[0]}}" method="post" enctype="multipart/form-data">
+           <div class="form-row">
 
-     
-        <div class="form-group col-md-2">
-          <label for="codigo">Codigo</label>
-          <input type="text" class="form-control" value="{{al[1]}}" name="txtcodigo" id="codigo" placeholder="Codigo"
-            required>
-        </div>
-        <div class="form-group col-md-6">
-          <label for="nombre">Nombre</label>
-          <input type="text" class="form-control" name="txtnombre" value="{{al[2]}}" id="nombre" placeholder="Nombre"
-            required>
-        </div>
+                <div class="form-group col-1">
 
 
+                 </div>
 
-      <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="temas">Cantidad temas</label>
-          <input type="number" class="form-control" id="temas" value="{{al[6]}}" name="txttemas" required>
-        </div>
- 
-
-        <div class="form-group col-md-3">
-          <label for="fecha">Fecha lanzamiento</label>
-          <input type="date" class="form-control" id="fecha" name="txtfecha" value="{{al[14]}}" required>
-        </div>
-        <div class="form-group col-md-3">
-          <label for="precio">Precio</label>
-          <input type="number" step='any' class="form-control" id="precio" name="txtprecio" value="{{al[10]}}" required>
-        </div>
-        <div class="form-group col-md-3">
-          <label for="cantidad">Cantidad</label>
-          <input type="number" class="form-control" id="cantidad" name="txtcantidad" value="{{al[11]}}" required>
-        </div>
-
-        <div class="form-group col-md-3">
-          {%if al[15]=='' or al[15]=='NULL' or al[15]=='None' %}
-          <label for="caratula2">Caratula</label>
-          <input type="text" class="form-control caratula2" disabled id="caratula2"  name="txtcaratula2">
-          {%else%}
-          <label for="caratula2">Caratula</label>
-          <input type="text" class="form-control caratula2" disabled id="caratula2" value="{{al[15]}}" name="txtcaratula2">
-          {%endif%}
-        
-        </div>
-
-        <div class="form-group col-md-2">
-          <label for="caratula">Caratula</label>
-          <input type="file" class="form-control" onchange="mostrarSeleccion()" id="caratula" name="txtcaratula"
-           >
-        </div>
-
-       <!---- <div class="form-group col-md-3">
-        {% if al[14]==None or al[14]==""%}
-        <img id="imagenalbum" width="70px" height="70px"  src=/img/sin_imagen.png>
-        {%else%}
-        <img id="imagenalbum" width="70px" height="70px"  src=/img/{{al[14]}}>
-        {%endif%}
-      </div>-->
-   
-        <!--<div class="form-group col-md-2">
-                    <label for="inputState">State</label>
-                    <select id="inputState" class="form-control">
-                      <option selected>Choose...</option>
-                      <option>...</option>
-                    </select>
-                  </div>
-                  <div class="form-group col-md-2">
-                    <label for="inputZip">Zip</label>
-                    <input type="text" class="form-control" id="inputZip">
-                  </div>
+                <div class="form-group col-md-1">
+                     <label for="codigo">Codigo</label>
+                     <input type="text" class="form-control" value="{{al[1]}}" name="txtcodigo" id="codigo" placeholder="Codigo"
+                    required>
                 </div>
 
-                <div class="form-group">
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="gridCheck">
-                    <label class="form-check-label" for="gridCheck">
-                      Check me out
-                    </label>
-                  </div>-->
-                
-                  
-             
-                  <div class="form-group col-md-2">
-                    <label for="interprete2">Intérprete</label>
+               <div class="form-group col-md-6">
+                     <label for="nombre">Nombre</label>
+                      <input type="text" class="form-control" name="txtnombre" value="{{al[2]}}" id="nombre" placeholder="Nombre"
+                      required>
+                </div>
+
+
+                <div class="form-group col-md-3">
+                     <label for="interprete2">Intérprete</label>
                     <select id="interprete2" name="txtinterprete2" class="form-control" required>
-              
-                      <!--<option>Seleccione el interprete ...</option>-->
-                      {% for interprete in interpretes%}
-                      {%if interprete[0] ==al[3]%}
-                        <option value="{{interprete[0]}}" selected>{{interprete[1]}} {{interprete[2]}}</option>
-                      {% else %}
-                        <option value="{{interprete[0]}}">{{interprete[1]}} {{interprete[2]}}</option>
-                      {% endif %}
-                      {% endfor%}
+
+                     
+                       {% for interprete in interpretes%}
+                        {%if interprete[0] ==al[3]%}
+                            <option value="{{interprete[0]}}" selected>{{interprete[1]}} {{interprete[2]}}</option>
+                            {% else %}
+                            <option value="{{interprete[0]}}">{{interprete[1]}} {{interprete[2]}}</option>
+                            {% endif %}
+                            {% endfor%}
+
+                    </select>
+                  </div>
+          </div>
+
+
+          <div class="form-row">
+                  <div class="form-group col-1">
+                  </div>
+
+                        <div class="form-group col-md-3">
+                              <label for="genero2">Género</label>
+                              <select id="genero2" name="txtgenero2" class="form-control" value="{{al[5]}}" required>
                     
-                    </select>
-                  </div>
-                  <div class="form-group col-md-2">
-                    <label for="genero2">Género</label>
-                    <select id="genero2" name="txtgenero2" class="form-control" value="{{al[5]}}" required>
-                      <!--<option>Seleccione el género ...</option>-->
-                      {% for genero in generos%}
-                      {% if genero[0]== al[6]%}
-                      <option value="{{genero[0]}}" selected="selected">{{genero[1]}}</option>
-                      {%else%}
-                      <option value="{{genero[0]}}">{{genero[1]}}</option>
-                      {%endif%}
-                      {% endfor%}
-                      
-                    </select>
-                  </div>
+                            {% for genero in generos%}
+                            {% if genero[0]== al[6]%}
+                                  <option value="{{genero[0]}}" selected="selected">{{genero[1]}}</option>
+                            {%else%}
+                                  <option value="{{genero[0]}}">{{genero[1]}}</option>
+                            {%endif%}
+                            {% endfor%}
 
-                  <div class="form-group col-md-2">
-                    <label for="discografica2">Discográfica</label>
-                    <select id="discografica2" name="txtdiscografica2" class="form-control" required>
-                      <!--<option>Seleccione la discográfica ...</option>-->
-                      {% for discografica in discograficas%}
-                      {%if discografica[0]== al[8]%}
-                      <option value="{{discografica[0]}}" selected>{{discografica[1]}}</option>
-                      {%else%}
-                          <option value="{{discografica[0]}}">{{discografica[1]}}</option>
-                      {%endif%}
-                      {% endfor%}
-                     
-                    </select>
-                  </div>
+                           </select>
+                        </div>
 
-                  <div class="form-group col-md-2">
-                    <label for="formato2">Formato</label>
-                    <select id="formato2" name="txtformato2" class="form-control"  required>
-                      <!--<option>Seleccione el formato ...</option>-->
-                      {% for formato in formatos%}
-                      {% if formato[0] ==al[12] %}
-                      <option value="{{formato[0]}}" selected>{{formato[1]}}</option>
-                      {%else%}
-                      <option value="{{formato[0]}}">{{formato[1]}}</option>
-                      {%endif%}
-                      {% endfor%}
-                     
-                    </select>
-                  {% endfor%}
-                  </div>
-          
+                         <div class="form-group col-md-1">
+                              <label for="temas">Nro, temas</label>
+                               <input type="number" class="form-control" id="temas" value="{{al[6]}}" name="txttemas" required>
+                         </div>
 
-                  <button type="submit" class="btn-md btn-primary">Modificar album</button>
+
+                         <div class="form-group col-md-3">
+                               <label for="discografica2">Discográfica</label>
+                                <select id="discografica2" name="txtdiscografica2" class="form-control" required>
+                                      
+                                 {% for discografica in discograficas%}
+                                 {%if discografica[0]== al[8]%}
+                                      <option value="{{discografica[0]}}" selected>{{discografica[1]}}</option>
+                                  {%else%}
+                                      <option value="{{discografica[0]}}">{{discografica[1]}}</option>
+                                   {%endif%}
+                               {% endfor%}
+
+                                </select>
+                          </div>
+
+                          <div class="form-group col-md-3">
+
+                                    <label for="formato2">Formato</label>
+                                    <select id="formato2" name="txtformato2" class="form-control" required>
+                                  
+                                      {% for formato in formatos%}
+                                      {% if formato[0] ==al[12] %}
+                                         <option value="{{formato[0]}}" selected>{{formato[1]}}</option>
+                                      {%else%}
+                                          <option value="{{formato[0]}}">{{formato[1]}}</option>
+                                      {%endif%}
+                                      {% endfor%}
+
+                                    </select>
+
+                        </div>
+          </div>                   
+
+
+          <div class="form-row">
+              <div class="col-1">
+    
+              </div>
+
+   
+              <div class="form-group col-md-2">
+                    <label for="fecha">Fecha lanzamiento</label>
+                    <input type="date" class="form-control" id="fecha" name="txtfecha" value="{{al[14]}}" required>
+              </div>
+
+              <div class="form-group col-md-2">
+                    <label for="precio">Precio</label>
+                    <input type="number" step='any' class="form-control" id="precio" name="txtprecio" value="{{al[10]}}" required>
+              </div>
+
+              <div class="form-group col-md-1">
+                      <label for="cantidad">Stock</label>
+                       <input type="number" class="form-control" id="cantidad" name="txtcantidad" value="{{al[11]}}" required>
+              </div>
+
+             <div class="form-group col-md-3">
+
+                  <label for="caratula3">Caratula</label>
+                 <input type="text" class="form-control caratula2" readonly id="caratula3" value="{{al[15]}}" name="txtpath">
+
+
+            </div>
+
+           <div class="form-group col-md-2">
+               <label for="caratula">.</label>
+               <input type="file"  class="form-control"  onchange="mostrarSeleccion()" id="caratula" name="txtcaratula">
+          </div>
+</div>
+        {% endfor%}
+      <div class="form-row">
+   
+          <div class="col-md-5">      
+            
+    
+          </div>      
+       <div class="col-4">      
+           <button type="submit" class="btn btn-primary text-center">Modificar album</button>
+
+      </div> 
+   </div>
+
+       
 
 
     </form>
@@ -171,9 +169,12 @@
 </div>
 
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+  integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+  integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+  integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="/js/utilidades.js"></script>
 
 
